# fair-forge

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml
docs/source/: api.rst  conf.py  index.rst  nn_api.rst
docs/source/_templates/autosummary/: module.rst
examples/: adult.ipynb  dataset_exploration.ipynb  full_example.ipynb
fair_forge/: __init__.py  _metrics_common.py  data_metrics.py  datasets.py  eval.py  methods.py  metrics.py  pipeline.py  preprocessing.py  split.py  utils.py
fair_forge/data/: adult.parquet  toy.parquet
fair_forge/nn/: __init__.py  beutel.py  utils.py
fair_forge/preprocessing/: __init__.py  definitions.py  group_pre_method.py
scripts/: generate_adult.py
source/: conf.py  index.rst
src/fair_forge/: __init__.py  metrics.py
tests/: test_data_metrics.py  test_datasets.py  test_eval.py  test_methods.py  test_metrics.py  test_pipeline.py  test_pre_methods.py  test_utils.py
tests/nn_tests/: test_beutel.py  test_nn_utils.py
