[project]
name = "fair-forge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Thomas M Kehrenberg", email = "tmke8@posteo.net" }]
requires-python = ">=3.12"
dependencies = ["polars>=1.31.0", "scikit-learn>=1.7.0"]

[build-system]
requires = ["uv_build>=0.7.19,<0.8"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""

[dependency-groups]
dev = ["microsoft-python-type-stubs", "pytest>=8.4.1", "ruff>=0.12.3"]

[tool.uv.sources]
microsoft-python-type-stubs = { git = "https://github.com/microsoft/python-type-stubs.git", rev = "ee6d039" }

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.12"
reportMissingTypeArgument = "none"
reportUnnecessaryComparison = "none"
reportCallInDefaultInitializer = "warning"
reportPropertyTypeMismatch = "warning"
reportUninitializedInstanceVariable = "warning"
reportPrivateUsage = "warning"
reportUnnecessaryTypeIgnoreComment = "warning"
reportConstantRedefinition = "warning"
# these errors are a bit annoying
reportUnknownMemberType = "none"
reportUnknownVariableType = "none"
reportUnknownParameterType = "none"
reportUnknownArgumentType = "none"
reportUnknownLambdaType = "none"
include = ["fair_forge", "tests"]
venvPath = "."
venv = ".venv"

[tool.ruff.lint]
# defaults: `E4`, E7`, `E9`, and `F`
select = ["E4", "E7", "E9", "F", "I", "PLC", "PLE", "PLW", "UP", "NPY", "FURB", "RUF", "PT", "PTH"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "F403", # star imports
]

[tool.ruff.lint.isort]
extra-standard-library = ["typing_extensions"]
no-lines-before = ["future", "standard-library"]
force-sort-within-sections = true
split-on-trailing-comma = false
